--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,125 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @font-face {
     font-family: "Jet Brains Mono";
-    src: url("../public/fonts/JetBrainsMono-Bold.ttf");
+    src: url("/fonts/JetBrainsMono-Bold.ttf");
+  }
+
+
+  @layer components {
+
+    .checkbox {
+      box-sizing: border-box;
+      appearance: none;
+      background-color: theme('colors.very-dark-grey');
+      height: theme('spacing.5');
+      width: theme('spacing.5');;
+      position: relative;
+      cursor: pointer;
+      border: 2px solid theme('colors.almost-white')
+    }
+
+    .checkbox:hover {
+      border: 2px solid theme('colors.neon-green');
+    }
+
+    .checkbox:checked {
+      background: url('/images/checked.svg');
+      border: none;
+    }
+
+    .slider {
+      background: theme('colors.very-dark-grey');
+      width: 100%;
+      height: 8px;
+      -webkit-appearance: none;
+      appearance: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .slider:focus {
+      outline: transparent;
+    }
+    
+    /* WebKit */
+    .slider::-webkit-slider-thumb {
+      background-color: theme('colors.almost-white');
+      border: 0;
+      border-radius: 50%;
+      display: block;
+      width: 28px;
+      height: 28px;
+      transition: background-color 0.15s linear, border 0.15s ease-in-out;
+      -webkit-appearance: none;
+      appearance: none;
+    }
+    .slider:focus::-webkit-slider-thumb,
+    .slider::-webkit-slider-thumb:hover {
+      background-color: theme('colors.very-dark-grey');
+      border: 2px solid theme('colors.neon-green');
+    }
+    
+    /* Firefox */
+    .slider::-moz-range-thumb {
+      background-color: theme('colors.almost-white');
+      border: 0;
+      border-radius: 50%;
+      display: block;
+      width: 28px;
+      height: 28px;
+      transition: background-color 0.15s linear, border 0.15s ease-in-out;
+      -webkit-appearance: none;
+      appearance: none;
+    }
+    .slider:focus::-moz-range-thumb,
+    .slider::-moz-range-thumb:hover {
+      background-color: theme('colors.very-dark-grey');
+      border: 2px solid theme('colors.neon-green');
+    }
+    
+    /* All the same stuff for IE */
+    .slider::-ms-thumb {
+      background-color: theme('colors.almost-white');
+      border: 0;
+      border-radius: 50%;
+      display: block;
+      width: 28px;
+      height: 28px;
+      transition: background-color 0.15s linear, border 0.15s ease-in-out;
+      appearance: none;
+    }
+    .slider:focus::-ms-thumb,
+    .slider::-ms-thumb:hover {
+      background-color: theme('colors.very-dark-grey');
+      border: 2px solid theme('colors.neon-green');
+    }
+    
+    /** FF*/
+    .slider::-moz-range-progress {
+      background-color: theme('colors.neon-green');
+    }
+    .slider::-moz-range-track {
+      background-color: theme('colors.very-dark-grey');
+    }
+    /* IE*/
+    .slider::-ms-fill-lower {
+      background-color: theme('colors.neon-green');
+    }
+    .slider::-ms-fill-upper {
+      background-color: theme('colors.very-dark-grey');
+    }
+    
+    /*Chrome*/
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+      .slider {
+        --percent: 75%;
+        background: linear-gradient(
+          to right,
+          theme('colors.neon-green') 0%,
+          theme('colors.neon-green') var(--percent),
+          theme('colors.very-dark-grey') var(--percent),
+          theme('colors.very-dark-grey') 100%
+        );
+      }
+    }
   }
